--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@ a {
     color: #E5E7EB;
 }
 
-img, 
+.hero-content img, 
 .hero-text {
     flex: 1;
 }
@@ -73,7 +73,7 @@ button {
     font-size: 15px;
 }
 
-img {
+.hero-content img {
     background-color: rgb(109 116 125);
     color: rgb(248 248 249);
     height: auto;
