--- a/style.css
+++ b/style.css
@@ -80,3 +80,35 @@ button {
     align-content: center;
     text-align: center;
 }
+
+.info-header {
+    font-size: 36px;
+    color: #1F2937;
+    font-weight: 900;
+    text-align: center;
+    margin: 50px;
+}
+
+.info-container {
+    display: flex;
+    justify-content: center;
+    gap: 40px;
+    margin-bottom: 142px;
+}
+
+.img-content {
+    max-width: 158px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 7px;
+}
+
+.img-content img {
+    border: 4px solid #3882F6;
+    border-radius: 12%;
+}
+
+.img-content .subtext {
+    text-align: center;
+}
