--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@ body {
 .header {
     display: flex;
     justify-content: space-between;
+    flex-wrap: wrap;
 }
 
 .logo, 
@@ -32,12 +33,14 @@ a {
 .header-links {
     display: flex;
     gap: 20px;
+    flex-wrap: wrap;
 }
 
 .hero-content {
     display: flex;
     margin: 100px 0;
     gap: 30px;
+    flex-wrap: wrap;
 }
 
 .hero-main {
@@ -77,6 +80,7 @@ button {
     background-color: rgb(109 116 125);
     color: rgb(248 248 249);
     height: auto;
+    width: 200px;
     align-content: center;
     text-align: center;
 }
@@ -94,6 +98,7 @@ button {
     justify-content: center;
     gap: 40px;
     margin-bottom: 142px;
+    flex-wrap: wrap;
 }
 
 .img-content {
@@ -107,6 +112,8 @@ button {
 .img-content img {
     border: 4px solid #3882F6;
     border-radius: 12%;
+    height: auto;
+    width: 150px;
 }
 
 .img-content .subtext {
@@ -139,6 +146,7 @@ button {
     padding: 50px 100px;
     border-radius: 10px;
     color: white;
+    flex-wrap: wrap;
 }
 
 .section4 button {
