--- a/style.css
+++ b/style.css
@@ -74,6 +74,7 @@ button {
     border-radius: 10px;
     font-weight: bold;
     font-size: 15px;
+    font-family: inherit;
 }
 
 .hero-content img {
